added delete account function

--- a/usersettings.html
+++ b/usersettings.html
@@ -51,6 +51,13 @@
                 <button type="submit" class="btn">Change</button>
             </form>
         </div>
+
+        <div>
+            <form action="delete_account.php">
+                <p>Delete account</p>
+                <button>Delete</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
