--- a/login.html
+++ b/login.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="login-register.css">
 </head>
 <body>
     <form action="login.php" method="post">
-        <input type="text" name="username"> <br> <br>
-        <input type="password" name="password"> <br> <br>
-        <input type="submit" value="submit"> <br> <br>
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username"> <br> <br>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password"> <br> <br>
+        <input type="submit" value="Submit"> <br> <br>
+        <p>Don't have an account? <a href="register.html">Register</a></p>
+        <p>Need more help? <a href="faq.html">Faq</a></p>
     </form>
 </body>
 </html>
