--- a/register.html
+++ b/register.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="login-register.css">
 </head>
 <body>
     <form action="register.php" method="post">
+        <label for="username">Username:</label><br>
         <input type="text" name="name"> <br> <br>
+        <label for="username">Name:</label><br>
         <input type="text" name="username"> <br> <br>
+        <label for="username">Password:</label><br>
         <input type="password" name="password"> <br> <br>
         <input type="submit" value="submit"> <br> <br>
+        <p>Don't have an account? <a href="login.html">Login</a></p>
+        <p>Need more help? <a href="faq.html">Faq</a></p>
     </form>
     
 </body>
