--- a/usersettings.html
+++ b/usersettings.html
@@ -10,18 +10,11 @@
 <body>
     <div class="usersettings">
         <h2>User Settings</h2>
-        
-        <p><a href="#change-name">Change name</a></p>    
-        <p><a href="#change-username">Change username</a></p>    
-        <p><a href="#change-email">Change email</a></p>
-        <p><a href="#change-password">Change password</a></p>
-        <a href="chat_system.php" class="back-btn"><i class="fas fa-arrow-left back-icon"></i>Back</a>
-
 
         <!-- Input fields for changing name -->
         <div id="change-name" class="change-input">
             <form action="changeName.php" method="post">
-                <input type="text" placeholder="New Name"> <br>
+                <input type="text" placeholder="New Name" name="new_name"> <br>
                 <button type="submit" class="btn">Change</button>
             </form>
         </div>
@@ -46,18 +39,23 @@
         <div id="change-password" class="change-input">
             <form action="changePassword.php" method="post">
                 <input type="password" placeholder="Current Password" name="old_password">  <br>
-                <input type="password" placeholder="New Password" name="n_password"> <br>
-                <input type="password" placeholder="Confirm New Password" name="cn_password"> <br>
+                <input type="password" placeholder="New Password" name="new_password"> <br>
+                <input type="password" placeholder="Confirm New Password" name="confirm_password"> <br>
                 <button type="submit" class="btn">Change</button>
             </form>
         </div>
 
+        <br> <br>
+        <!-- Delete account option -->
         <div>
             <form action="delete_account.php">
                 <p>Delete account</p>
-                <button>Delete</button>
+                <button type="submit" class="btn delete-button">Delete</button>
             </form>
-        </div>
+        </div> <br> <br>
+        <a href="chat_system.php" class="home-button">Home</a>
     </div>
+
+
 </body>
 </html>
