--- a/faq.html
+++ b/faq.html
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <a href="chat_system.php" class="home-button">Home</a>
+        <a href="index.php" class="home-button">Home</a>
     </div>
 </body>
 </html>
