--- a/usersettings.html
+++ b/usersettings.html
@@ -53,7 +53,7 @@
                 <button type="submit" class="btn delete-button">Delete</button>
             </form>
         </div> <br> <br>
-        <a href="chat_system.php" class="home-button">Home</a>
+        <a href="index.php" class="home-button">Home</a>
     </div>
 
 
