--- a/login.html
+++ b/login.html
@@ -7,14 +7,23 @@
     <link rel="stylesheet" href="login-register.css">
 </head>
 <body>
-    <form action="login.php" method="post">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"> <br> <br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"> <br> <br>
-        <input type="submit" value="Submit"> <br> <br>
-        <p>Don't have an account? <a href="register.html">Register</a></p>
-        <p>Need more help? <a href="faq.html">Faq</a></p>
-    </form>
+    <div class="login-container">
+        <div class="login-box">
+            <h2>Login</h2>
+            <form action="login.php" method="post">
+                <div class="input-group">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <input type="submit" value="Submit">
+                <p>Don't have an account? <a href="register.html">Register</a></p>
+                <p>Need more help? <a href="faq.html">Faq</a></p>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
