--- a/register.html
+++ b/register.html
@@ -7,17 +7,31 @@
     <link rel="stylesheet" href="login-register.css">
 </head>
 <body>
-    <form action="register.php" method="post">
-        <label for="username">Username:</label><br>
-        <input type="text" name="name"> <br> <br>
-        <label for="username">Name:</label><br>
-        <input type="text" name="username"> <br> <br>
-        <label for="username">Password:</label><br>
-        <input type="password" name="password"> <br> <br>
-        <input type="submit" value="submit"> <br> <br>
-        <p>Don't have an account? <a href="login.html">Login</a></p>
-        <p>Need more help? <a href="faq.html">Faq</a></p>
-    </form>
-    
+    <div class="login-container">
+        <div class="login-box">
+            <h2>Register</h2>
+            <form action="register.php" method="post">
+                <div class="input-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="input-group">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <input type="submit" value="Submit" class="submit-btn">
+                <div class="policy-container">
+                    <input type="checkbox" name="accept_policies" id="accept_policies" required>
+                    <label for="accept_policies">I accept all <a href="policies.html" target="_blank">policies</a></label>
+                </div>
+                <p>Already have an account? <a href="login.html">Login</a></p>
+                <p>Need more help? <a href="faq.html">FAQ</a></p>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
